Remove supports for Embedded options.
Revert if you still use it (and make it work againt :-) ).


git-svn-id: https://svn.apache.org/repos/asf/tomcat/container/catalina/trunk@302372 13f79535-47bb-0310-9956-ffa450edef68